2009/11/5: Takuya Murakami <tmurakam@tmurakam.org>
	* ver 1.0.5
	* Initial git commit