@@ -4,6 +4,9 @@
 
 DocBook のツールチェインセットアップ用環境一式です。
 
+本環境の最新版は以下の URL にあります。
+http://github.com/tmurakam/docbook-env
+
 
 ○ 必要環境
 
@@ -67,3 +70,6 @@ RPM ファイルの作成は以下のように行います。
 
 このとき、Internet から必要なファイルを自動的にダウンロードしてきますので、
 wget のプロキシの設定は適切に行っておいてください。
+
+----
+
