@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(default)
-AM_INIT_AUTOMAKE(docbook-env, 1.0.5)
+AM_INIT_AUTOMAKE(docbook-env, 1.0.6)
 
 dnl set envdir
 if test "x$prefix" == "xNONE"; then
